--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
   repositories {
-    google()
     jcenter()
   }
 
@@ -30,7 +29,7 @@ android {
 }
 
 repositories {
-  google()
+  maven { url = "https://dl.bintray.com/android/android-tools/" }
   maven { url "$rootDir/../node_modules/react-native/android" }
   mavenCentral()
   maven { url "http://appboy.github.io/appboy-android-sdk/sdk" } // Required for Braze (formerly Appboy)
