--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,9 +29,9 @@ android {
 }
 
 repositories {
-  maven { url = "https://dl.bintray.com/android/android-tools/" }
   maven { url "$rootDir/../node_modules/react-native/android" }
   mavenCentral()
+  maven { url "https://dl.bintray.com/android/android-tools/" }
   maven { url "http://appboy.github.io/appboy-android-sdk/sdk" } // Required for Braze (formerly Appboy)
   maven { url 'https://comscore.bintray.com/Analytics' } // Required for Comscore
   maven { url 'http://dl.bintray.com/countly/maven' } // Required for Countly
