--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
   repositories {
     jcenter()
+    google()
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.3'
+    classpath 'com.android.tools.build:gradle:3.2.1'
   }
 }
 
@@ -29,6 +30,7 @@ android {
 }
 
 repositories {
+  google()
   maven { url "$rootDir/../node_modules/react-native/android" }
   mavenCentral()
   maven { url "https://dl.bintray.com/android/android-tools/" }
